fix horizontal scrolling

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -92,6 +92,7 @@ body {
   font-synthesis: none;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
   text-rendering: optimizeLegibility;
 }
 
@@ -287,14 +288,14 @@ main>.section {
 }
 
 main>.section>div {
-  width: 100vw;
-  max-width: 100vw;
-  min-width: 100vw;
+  width: 100%;
+  max-width: 100%;
   margin: 0;
   margin-left: calc(-50vw + 50%);
   margin-right: calc(-50vw + 50%);
   padding: 0 1rem;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 main>.section:first-of-type {
